--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,7 @@
               with client and adding value to their business.
             </p>
             <p class="text-gray-400 text-xs">
-              SKT GROUP – Designed by Indranil Kanjilal
+              SKT GROUP – Designed by tomcatdev
             </p>
           </div>
 
