Map Iframe added

--- a/contact.html
+++ b/contact.html
@@ -561,7 +561,17 @@
                 loading="lazy" 
                 referrerpolicy="no-referrer-when-downgrade">
               </iframe>
-            -->
+              -->
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58969.252692142676!2d88.29848022167967!3d22.52000000000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0277c049fa292d%3A0x5d9c58d69214d968!2sSKT%20Hospitality%20Services!5e0!3m2!1sen!2sin!4v1769672701964!5m2!1sen!2sin"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+
               <div
                 class="w-full h-full bg-gray-200 flex items-center justify-center"
               >
